REDO-1358: fix varying checkmark sizes on ios mobile

--- a/source/css/scss/app/pages/loan.scss
+++ b/source/css/scss/app/pages/loan.scss
@@ -144,6 +144,7 @@
 						}
 					}
 					.name-and-description {
+						width: 100%;
 						pointer-events: none;
 						padding-top: 1rem;
 						padding-bottom: 1rem;
